--- a/agency-services-transunion/serverless.yml
+++ b/agency-services-transunion/serverless.yml
@@ -78,6 +78,18 @@ resources:
         AvailabilityZone: !Select [2, !GetAZs '']
         CidrBlock: !Sub '10.0.160.0/20'
         VpcId: !Ref VPC
+    SubnetAPublic:
+      Type: AWS::EC2::Subnet
+      Properties:
+        AvailabilityZone: !Select [0, !GetAZs '']
+        CidrBlock: !Sub '10.0.228.0/20'
+        VpcId: !Ref VPC
+    SubnetBPublic:
+      Type: AWS::EC2::Subnet
+      Properties:
+        AvailabilityZone: !Select [0, !GetAZs '']
+        CidrBlock: !Sub '10.0.228.0/20'
+        VpcId: !Ref VPC
     VpcEndpointSecurityGroup:
       Type: 'AWS::EC2::SecurityGroup'
       Properties:
@@ -122,6 +134,6 @@ resources:
         Name: !Sub '${self:service}-subnets-private'
     SecurityGroup:
       Description: 'VPC Endpoint Security Group'
-      Value: !GetAtt VpcEndpointLambdaSecurityGroup.GroupId
+      Value: !Join [',', [!Ref VpcEndpointLambdaSecurityGroup]]
       Export:
         Name: !Sub '${self:service}-vpc-securitygroup'
