fixed resource policy

--- a/agency-services-transunion/serverless.yml
+++ b/agency-services-transunion/serverless.yml
@@ -42,7 +42,7 @@ provider:
         - !Sub 'arn:aws:execute-api:${AWS::AccountId}:*'
       Condition:
         StringNotEquals:
-          aws:SourceVpce:
+          aws:sourceVpce:
             - !Ref ApiVpcEndpoint
 
 functions:
