--- a/agency-services-transunion/package.json
+++ b/agency-services-transunion/package.json
@@ -19,5 +19,7 @@
     "serverless-dotenv-plugin": "^3.0.0",
     "serverless-offline": "^6.8.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "axios": "^0.21.1"
+  }
 }
