--- a/agency-services-transunion/serverless.yml
+++ b/agency-services-transunion/serverless.yml
@@ -52,7 +52,7 @@ functions:
       - { Ref: TuCertsLambdaLayer }
     events:
       - sns:
-          arn: ${self::provider.environment.SNS_PROXY_ARN}
+          arn: ${self:provider.environment.SNS_PROXY_ARN}
           topicName: SnsProxyTopic
           integration: lambda-proxy
 
