--- a/agency-services-transunion/serverless.yml
+++ b/agency-services-transunion/serverless.yml
@@ -59,6 +59,18 @@ functions:
           filterPolicy:
             service:
               - 'transunion'
+  postRequests:
+    handler: src/handlers/postRequests.main
+      layers:
+        - { Ref: TuCertsLambdaLayer }
+      events:
+        - sns:
+            arn: ${self:provider.environment.SNS_PROXY_ARN}
+            topicName: SnsProxyTopic
+            integration: lambda-proxy
+            filterPolicy:
+              service:
+                - 'transunion'
 
 resources:
   Resources:
