--- a/agency-services-transunion/serverless.yml
+++ b/agency-services-transunion/serverless.yml
@@ -31,6 +31,12 @@ provider:
     subnetIds:
       - !Ref SubnetAPrivate
       - !Ref SubnetBPrivate
+  iamRoleStatements:
+    - Effect: 'Allow'
+        Action:
+          - secretsmanager:GetSecretValue
+        Resource:
+          - !Sub 'arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${self:provider.stage}/agency-services/transunion'
 
 layers:
   TuCerts:
